clusters/takeout/apps/n8n/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: n8n
  namespace: default
  labels:
    app: n8n
spec:
  replicas: 1 # active nfs-client-fast
  selector:
    matchLabels:
      app: n8n
  serviceName: n8n
  template:
    metadata:
      annotations: {}
      labels:
        app: n8n
    spec:
      containers:
        - name: n8n
          image: n8nio/n8n:latest
          imagePullPolicy: Always
          # command: ["tail","-f","/dev/null"]
          ports:
            - containerPort: 5678
              name: http
              protocol: TCP
          volumeMounts:
            - name: n8n-data
              mountPath: /home/node/.n8n
          resources:
            requests:
              cpu: 500m
            limits:
              memory: 512Mi
      volumes:
        - name: n8n-data
          persistentVolumeClaim:
            claimName: n8n-data
      serviceAccount: n8n
      imagePullSecrets:
        - name: docker-hub
      # nodeSelector:
      #   kubernetes.io/hostname: trainman
