clusters/takeout/apps/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: default
spec:
  type: NodePort
  selector:
    app: n8n
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5678
